testing/Travis/testcases/prototype/shouldSucceed/SelectExprTest.adl
CONTEXT SelectExprTest IN ENGLISH

PURPOSE PATTERN SelectExprTest IN ENGLISH 
{+
This pattern is meant to test the translation of Terms in Ampersand into
SELECT statements in SQL.
+}

PATTERN SelectExprTest
  RELATION r[A*A]
  RELATION s[A*A]
  RELATION t[A*B]
ENDPATTERN

INTERFACE Overview : I[ONE]
  BOX [ as : V[ONE*A]
        BOX [ "id" : I
            , "r"  : r
            , s    : s
            , t    : t
            ]
      ]

INTERFACE Id: I[A]
  BOX [ id         : I[A]
      , r          : r
      , s          : s
      , t          : t
      , "r/\\s"    : r/\s
      , "r\\/s"    : r\/s
      , "r;s"      : r;s
      , "r;t"      : r;t
      , "r!s"      : r!s
      , "r!t"      : r!t
      , "r\\s"     : r\s
      , "r/s"      : r/s
      , "r-s"      : r-s
--      , "r*"       : r*
--      , "r+"       : r+
      ]

POPULATION r CONTAINS
    [ ("Ieniemienie", "Pino")
    ; ("Tommie", "Tommie")
    ; ("Pino", "Ieniemienie")
    ]

ENDCONTEXT
